# hera-video-analysis

./: README.md  combined_frames_data.csv  debug_show_frame.py  illustrate.py  main.py  oneoff_convert_cache.py  playing_dataclass.py  playing_easyocr.py  playing_geminiocr.py  playing_pydantic_generic.py  pyproject.toml  video_list.json  viz.py  viz2.py
output/-1nbGVe9REo/: age_click_index.json  age_numeral_cache.json  age_start_index.json  age_text_cache.json  final_frame_index.json  frame_result_cache.json  metadata.json
output/-6NCS6Hkjtc/: age_click_index.json  age_numeral_cache.json  age_start_index.json  age_text_cache.json  final_frame_index.json  frame_result_cache.json  metadata.json
output/1dGqG6_h8H0/: age_click_index.json  age_numeral_cache.json  age_start_index.json  age_text_cache.json  final_frame_index.json  frame_result_cache.json  metadata.json
output/1g85tbr2bfg/: age_click_index.json  age_numeral_cache.json  age_start_index.json  age_text_cache.json  final_frame_index.json  frame_140379_results.json  frame_15246_results.json  frame_17688_agenumeralresult.json  frame_20000_results.json  frame_250_results.json  frame_35962_results.json  frame_41811_results.json  frame_44221_agenumeralresult.json  frame_78865_results.json  frame_85816_results.json  frame_result_cache.json  metadata.json
output/2DJE13bTCZw/: age_click_index.json  age_numeral_cache.json  age_start_index.json  age_text_cache.json  final_frame_index.json  frame_14081_results.json  frame_144223_results.json  frame_156_results.json  frame_18833_results.json  frame_42307_results.json  (+3 more)
(+660 files in other folders)
